overflow issue

--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -9,6 +9,6 @@
   height: 100% !important;
 }*/
 
-.tab-content>.active.html-fill-container {
+/* .tab-content>.active.html-fill-container {
     width: calc(100% + 15%) !important;
-}
+} */
